samples/_failures_safe/1761301356_df1d77_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f36e91ba.c: In function ‘main’:
./samples/SAFE/__tmp_f36e91ba.c:141:9: error: expected expression at end of input
  141 |         heap_mat1->data[
      |         ^~~~~~~~~
./samples/SAFE/__tmp_f36e91ba.c:141:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f36e91ba.c:141:9: error: expected declaration or statement at end of input
